--- a/app/views/entries/_entry_closed.html.slim
+++ b/app/views/entries/_entry_closed.html.slim
@@ -1,4 +1,4 @@
-.flex.justify-center.w-screen.h-screen.items-center
+.flex.justify-center.w-full.h-screen.items-center
   .mb-64.text-center
     h1.text-2xl.text-bold
       | 本抽選会は終了しました。
