--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,12 +11,13 @@ html
     = javascript_importmap_tags
     = javascript_include_tag 'jquery'
   body.bg-gray-200
-    - if user_signed_in?
+    - if user_signed_in? || entry_form?
       nav.nav-link.flex.justify-between.bg-indigo-500.p-2.
         .flex.flex-shrink-0.text-white.mx-6.align-middle
           = link_to image_tag('logo.png'), root_path
-        .flex.flex-shrink-0.items-center.text-brown.mx-6.align-middle
-          = button_to 'Log Out', destroy_user_session_path, method: :delete
+        - if user_signed_in?
+          .flex.flex-shrink-0.items-center.text-brown.mx-6.align-middle
+            = button_to 'Log Out', destroy_user_session_path, method: :delete
     p.notice
       = notice
     p.alert
