ボタンいろをロゴに合わせた

--- a/app/views/entries/_form.html.slim
+++ b/app/views/entries/_form.html.slim
@@ -30,5 +30,5 @@
           placeholder: 'その他、お知らせがあればご記入ください。'
 
     .mt-6.text-center.flex.justify-center
-      .bg-green-700.w-40.font-bold.text-white.rounded.py-2.px-2.hover:bg-green-800
+      .bg-lime-600.w-40.font-bold.text-white.rounded.py-2.px-2.hover:bg-lime-700
         = form.submit
