--- a/app/views/lotteries/_form.html.slim
+++ b/app/views/lotteries/_form.html.slim
@@ -27,7 +27,7 @@
       = link_to_add_association '＋賞品を追加', form, :prizes, data: { association_insertion_node: '.prizes', association_insertion_method: :append }
     ul.flex.justify-center.list-none.mt-6
       li
-        .bg-green-700.font-bold.text-white.rounded.py-2.px-2.hover:bg-green-800
+        .bg-lime-600.font-bold.text-white.rounded.py-2.px-2.hover:bg-lime-700
           = form.submit
       li
         .underline.mt-6.text-xs.ml-2
