--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,8 +16,8 @@ html
         .flex.flex-shrink-0.text-white.mx-6.align-middle
           = link_to image_tag('logo.png'), root_path
         - if user_signed_in?
-          .flex.flex-shrink-0.items-center.text-brown.mx-6.align-middle
-            = button_to 'Log Out', destroy_user_session_path, method: :delete
+          .flex.flex-shrink-0.items-center.text-brown.mx-6.align-middle.text-zinc-800
+            = button_to 'ログアウト', destroy_user_session_path, method: :delete
     p.notice
       = notice
     p.alert
