buttonの色を修正

--- a/app/views/lotteries/index.html.slim
+++ b/app/views/lotteries/index.html.slim
@@ -25,7 +25,7 @@
             .bg-gray-500.rounded-full.text-sm
               | 終了
           - else
-            .bg-yellow-600.rounded-full.text-sm
+            .bg-indigo-500.rounded-full.text-sm
               | 開催中
         .text-left.w-full
           .h-20
