--- a/app/views/lotteries/_form.html.slim
+++ b/app/views/lotteries/_form.html.slim
@@ -25,6 +25,9 @@
 
     button.w-36.h-10.rounded.py-2.px-2.mt-3.border.border-zinc-400
       = link_to_add_association '＋賞品を追加', form, :prizes, data: { association_insertion_node: '.prizes', association_insertion_method: :append }
+
+    .mt-6.underline.text-sm
+      = link_to '※ 匿名発送について', about_anonymous_deliver_path
     ul.flex.justify-center.list-none.mt-6
       li
         .bg-lime-600.font-bold.text-white.rounded.py-2.px-2.hover:bg-lime-700
