文言を修正

--- a/app/views/welcome/about_anonymous_deliver.slim
+++ b/app/views/welcome/about_anonymous_deliver.slim
@@ -9,5 +9,5 @@
     .underline.mt-3.text-sm
       = link_to '匿名発送の手順 | ヤマト運輸', 'https://faq.kuronekoyamato.co.jp/app/answers/detail/a_id/4249'
     .mt-3
-      | 2. 発行したURLを当選者にメールで送信
+      | 2. 1で発行したURLを当選者にメールで送信
 
