--- a/app/views/lotteries/_lottery.html.slim
+++ b/app/views/lotteries/_lottery.html.slim
@@ -37,7 +37,7 @@
             = Prize.human_attribute_name(:winning_email_body)
           td.px-3
             = prize.winning_email_body
-      - if closed?(lottery)
+      - if lottery_executed?(lottery) && closed?(lottery)
           .text-center.mt-3
             .font-bold
               | 当選者
