--- a/app/views/lotteries/_lottery.html.slim
+++ b/app/views/lotteries/_lottery.html.slim
@@ -40,7 +40,7 @@
       - if lottery_executed?(lottery) && closed?(lottery)
           .text-center.mt-3
             .font-bold
-              | 当選者
+              | 当選者欄
             - prize.entries.each do |winner|
               .border.border-gray.mt-3
                 table.text-left
