--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,7 +10,7 @@ html
     = stylesheet_link_tag 'application', 'data-turbo-track': 'reload'
     = javascript_importmap_tags
     = javascript_include_tag 'jquery'
-  body.bg-gray-200
+  body.bg-gray-200.flex.flex-col.min-h-screen
     - if user_signed_in? || entry_form?
       nav.nav-link.flex.justify-between.bg-indigo-500.p-2.
         .flex.flex-shrink-0.text-white.mx-6.align-middle
@@ -24,3 +24,5 @@ html
       = alert
     main.container.mx-auto
       = yield
+    footer.mt-auto
+      = render 'shared/footer'
