--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -1,7 +1,13 @@
 footer
-  .h-full.border-t.border-zinc-300.text-center.mt-6.py-3
+  .h-full.border-t.border-zinc-300.text-center.mt-6.py-3.text-zinc-500.text-sm
     .flex.justify-center
       = link_to 'https://github.com/OdenTakashi/SmartLottery'
         i.fa-brands.fa-github.fa-xl
-    .text-zinc-400.text-sm.mt-2
+      .ml-4.hover:underline
+        = link_to '利用規約', terms_path
+      .ml-2
+        | |
+      .ml-2.hover:underline
+        = link_to 'プライバシーポリシー', privacy_policy_path
+    .mt-3
       | © 2023 | odentakashi. All Rights Reserved.
