レスポンシブデザインを当てた

--- a/app/views/entries/_form.html.slim
+++ b/app/views/entries/_form.html.slim
@@ -1,4 +1,4 @@
-.w-5/12.m-auto
+.w-full.md:w-5/12.m-auto
   = form_with(model: [lottery, entry]) do |form|
     - if entry.errors.any?
       div style='color: red'
