--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,8 +1,6 @@
 doctype html
 html
   head
-    title
-      | SmartLottery
     meta[name='viewport' content='width=device-width,initial-scale=1']
     = csrf_meta_tags
     = csp_meta_tag
@@ -11,6 +9,7 @@ html
     = javascript_importmap_tags
     = javascript_include_tag 'jquery'
     = favicon_link_tag 'favicon.ico'
+    = display_meta_tags(default_meta_tags)
     script src='https://kit.fontawesome.com/66472dd369.js' crossorigin='anonymous'
   body.bg-gray-200.flex.flex-col.min-h-screen
     - if user_signed_in? || entry_form?
