--- a/app/views/entries/_form.html.slim
+++ b/app/views/entries/_form.html.slim
@@ -30,5 +30,5 @@
           placeholder: 'その他、お知らせがあればご記入ください。'
 
     .mt-6.text-center.flex.justify-center
-      .bg-lime-600.w-40.font-bold.text-white.rounded.py-2.px-2.hover:bg-lime-700
-        = form.submit
+      button.bg-lime-600.w-40.font-bold.text-white.rounded.py-2.px-2.hover:bg-lime-700
+        = form.submit nil, class: 'cursor-pointer'
