--- a/app/views/lotteries/new.html.slim
+++ b/app/views/lotteries/new.html.slim
@@ -1,6 +1,6 @@
 - set_meta_tags(title: '抽選会作成')
 
-h1.text-center.font-bold.text-2xl.mt-3
-  | 抽選会を作成する
+h1.text-center.font-bold.text-2xl.mt-6.text-slate-700
+  | 抽選会を作成
 
 == render 'form', lottery: @lottery
