--- a/app/views/lotteries/show.html.slim
+++ b/app/views/lotteries/show.html.slim
@@ -5,7 +5,7 @@
   - unless closed?(@lottery)
     .mt-6.m-auto data-controller='clipboard'
       input type='hidden' value=new_lottery_entry_url(@lottery) readonly='readonly' data-clipboard-target='source'
-      .font-bold.w-64.h-10.rounded.py-2.px-2.m-auto.text-center.border.border-zinc-400
+      .font-bold.w-64.h-10.rounded.py-2.px-2.m-auto.text-center.border.border-zinc-400.hover:border-zinc-900
         button data-action='clipboard#copy' data-clipboard-target='copyButton'
           | 応募フォームのURLをコピーする
   == render @lottery
@@ -22,6 +22,6 @@
         .bg-lime-600.font-bold.h-10.text-white.rounded.p-2.text-center.w-1/3.hover:bg-lime-700.md:w-1/5
           = button_to '編集する', edit_lottery_path(@lottery), method: 'get'
         .mt-6.mx-2
-          = button_to '削除する', @lottery, method: :delete, class: 'underline text-sm'
-  .underline.mt-6
+          = button_to '削除する', @lottery, method: :delete, class: 'underline text-sm hover:no-underline'
+  .underline.mt-6.hover:no-underline
     = link_to '一覧に戻る', root_path
