--- a/app/views/lotteries/index.html.slim
+++ b/app/views/lotteries/index.html.slim
@@ -2,7 +2,7 @@
 
 - if @lotteries.present?
   .mt-6
-    h1.text-center.text-2xl.font-bold.text
+    h1.text-center.text-2xl.font-bold.text-slate-700
       | 抽選会一覧
     .mt-3.bg-lime-600.font-bold.w-36.h-10.m-auto.text-white.rounded.flex.items-center.justify-center.hover:bg-lime-700
       = button_to '抽選会作成', new_lottery_path, method: 'get'
@@ -19,8 +19,8 @@
     = button_to '新規作成', new_lottery_path, method: 'get'
 
 - @lotteries.each do |lottery|
-  a href="lotteries/#{lottery.id}"
-    .bg-stone-100.m-auto.border.border-gray.rounded.mt-6.w-full.md:w-3/6
+  = link_to lottery_path(lottery) do
+    .bg-stone-100.m-auto.border.border-gray.rounded.mt-6.w-full.text-zinc-800.md:w-3/6
       .flex.m-2
         .w-14.mx-2.my-2.shrink-0.text-center.text-white
           - if closed?(lottery)
@@ -37,7 +37,7 @@
             - if extra_prizes_count(lottery).positive?
               p.my-2
                 = "その他#{extra_prizes_count(lottery)}つの賞品の抽選会"
-          .text-sm.text-zinc-500.mt-3.md:flex
+          .text-sm.text-zinc-400.mt-3.md:flex
             div
               =  "締め切り日時: #{l(lottery.deadline.end_of_day)}"
             .md:ml-2
