--- a/app/views/lotteries/_form.html.slim
+++ b/app/views/lotteries/_form.html.slim
@@ -37,8 +37,7 @@
 
     ul.flex.justify-center.list-none.mt-6
       li
-        button.bg-lime-600.font-bold.text-white.rounded.py-2.px-2.hover:bg-lime-700
-          = form.submit nil, class: 'cursor-pointer'
+        = form.submit nil, class: 'cursor-pointer bg-lime-600 font-bold text-white rounded py-2 px-2 hover:bg-lime-700'
       li
         .underline.mt-6.text-xs.ml-2.hover:no-underline
           = link_to 'キャンセル', lottery
