--- a/app/views/lotteries/show.html.slim
+++ b/app/views/lotteries/show.html.slim
@@ -5,8 +5,8 @@
   - unless closed?(@lottery)
     .mt-6.m-auto data-controller='clipboard'
       input type='hidden' value=new_lottery_entry_url(@lottery) readonly='readonly' data-clipboard-target='source'
-      .font-bold.w-64.h-10.rounded.py-2.px-2.m-auto.text-center.border.border-zinc-400.hover:border-zinc-900
-        button data-action='clipboard#copy' data-clipboard-target='copyButton'
+      .text-center
+        button.w-64.font-semibold.h-10.rounded.py-2.px-2.m-auto.border.border-zinc-400.hover:border-zinc-900 data-action='clipboard#copy' data-clipboard-target='copyButton'
           | 応募フォームのURLをコピーする
   == render @lottery
 
@@ -19,9 +19,8 @@
           = button_to '削除する', @lottery, method: :delete, class: 'underline text-sm'
     - else
       .flex.justify-center.items-end
-        .bg-lime-600.font-bold.h-10.text-white.rounded.p-2.text-center.w-1/3.hover:bg-lime-700.md:w-1/5
-          = button_to '編集する', edit_lottery_path(@lottery), method: 'get'
+        = link_to '編集する', edit_lottery_path(@lottery), method: 'get', class: 'bg-lime-600 font-bold h-10 text-white rounded p-2 text-center w-1/3 hover:bg-lime-700 md:w-1/5'
         .mt-6.mx-2
           = button_to '削除する', @lottery, method: :delete, class: 'underline text-sm hover:no-underline'
-  .underline.mt-6.hover:no-underline
-    = link_to '一覧に戻る', root_path
+    .mt-6
+      = link_to '一覧に戻る', root_path, class: 'underline hover:no-underline'
