--- a/app/views/users/shared/_links.html.erb
+++ b/app/views/users/shared/_links.html.erb
@@ -1,11 +1,11 @@
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
   <%= link_to "パスワードを忘れた場合", new_user_password_path(resource_name),
-              class: "inline-block align-baseline text-sm hover:text-blue-800 underline"
+              class: "inline-block align-baseline text-sm underline hover:no-underline"
   %> <br/>
 <% end %>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
   <%= link_to "確認メールが届かない場合", new_user_confirmation_path(resource_name),
-              class: "inline-block align-baseline text-sm hover:text-blue-800 underline"
+              class: "mt-3 inline-block align-baseline text-sm underline hover:no-underline"
   %><br />
 <% end %>
