--- a/app/views/lotteries/edit.html.slim
+++ b/app/views/lotteries/edit.html.slim
@@ -1,7 +1,7 @@
 - set_meta_tags(title: '抽選会編集')
 
 .m-auto.w-full
-  h1.text-center.mt-6.font-semibold.text-2xl
+  h1.text-center.mt-6.font-semibold.text-2xl.text-slate-700
     | 抽選会を編集する
 
   == render 'form', lottery: @lottery
