--- a/app/views/entries/_form.html.slim
+++ b/app/views/entries/_form.html.slim
@@ -8,7 +8,8 @@
             li = error.full_message
 
     .mt-3
-      = form.label :email, style: 'display: block'
+      = form.label :email, class: 'font-semibold text-zinc-800 pr-2'
+      span.text-red-500 ※
       = form.text_field :email,
         required: true,
         class: 'w-full mt-1 text-blue-699 bg-gray-100 border-gray-300 rounded',
@@ -16,7 +17,8 @@
 
     - if lottery.name_field_enabled
       .mt-3
-        = form.label :name, style: 'display: block'
+        = form.label :name, class: 'font-semibold text-zinc-800 pr-2'
+        span.text-red-500 ※
         = form.text_field :name,
           required: true,
           class: 'w-full mt-1 text-blue-699 bg-gray-100 border-gray-300 rounded',
@@ -24,7 +26,7 @@
 
     - if lottery.note_field_enabled
       .mt-3
-        = form.label :note, style: 'display: block'
+        = form.label :note, class: 'font-semibold text-zinc-800'
         = form.text_area :note,
           class: 'h-40 w-full mt-1 text-blue-699 bg-gray-100 border-gray-300 rounded text-sm',
           placeholder: 'その他、お知らせがあればご記入ください。'
