--- a/app/views/lotteries/_prize_fields.html.slim
+++ b/app/views/lotteries/_prize_fields.html.slim
@@ -2,19 +2,19 @@
 .nested-fields
   .bg-stone-100.border.border-gray.rounded.mt-5.w-full.p-6
     div
-      = f.label :name, style: 'display: block', class: 'text-zinc-800'
+      = f.label :name, style: 'display: block', class: 'text-zinc-800 font-bold'
       = f.text_field :name, placeholder: 'プロを目指す人のためのruby入門', class: 'w-full mt-2 rounded border border-gray-200', required: true
 
     .mt-3
-      = f.label :winners_count, style: 'display: block', class: 'text-zinc-800'
+      = f.label :winners_count, style: 'display: block', class: 'text-zinc-800 font-bold'
       = f.number_field :winners_count, placeholder: '2', class: 'w-full mt-2 rounded border border-gray-200', required: true
 
     .mt-3
-      = f.label :winning_email_subject, style: 'display: block', class: 'text-zinc-800'
+      = f.label :winning_email_subject, style: 'display: block', class: 'text-zinc-800 font-bold'
       = f.text_field :winning_email_subject, placeholder: '当選おめでとうございます!', class: 'w-full mt-2 rounded border border-gray-200', required: true
 
     .mt-3
-      = f.label :winning_email_body, style: 'display: block', class: 'text-zinc-800'
+      = f.label :winning_email_body, style: 'display: block', class: 'text-zinc-800 font-bold'
       = f.text_area :winning_email_body, placeholder: winning_email_body, class: 'h-60 w-full mt-2 rounded border border-gray-200 leading-6 text-sm', required: true
 
     .text-right.underline.hover:no-underline
