--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,12 +13,14 @@ html
     script src='https://kit.fontawesome.com/66472dd369.js' crossorigin='anonymous'
   body.bg-gray-200.flex.flex-col.min-h-screen
     - if user_signed_in? || entry_form?
-      nav.nav-link.flex.justify-between.bg-indigo-500.p-2.
-        .flex.flex-shrink-0.text-white.mx-6.align-middle
+      nav.nav-link.flex.justify-between.bg-indigo-500.p-2
+        .flex.flex-shrink-0.text-white.align-middle.md:mx-6
           = link_to image_tag('logo.png'), root_path
         - if user_signed_in?
-          .flex.flex-shrink-0.items-center.text-brown.mx-6.align-middle.text-zinc-800
+          .flex.flex-shrink-0.items-center.align-middle.text-zinc-700.ml-4.md:mx-6.text-xs.md:text-base
             = button_to 'ログアウト', destroy_user_session_path, method: :delete
+            .flex.flex-shrink-0.items-center.align-middle.ml-2.md:ml-6
+              = link_to '登録情報変更', edit_user_registration_path
     - if flash.notice.present?
       .w-screen.bg-lime-400.text-lime-800.p-2
         = notice
