--- a/app/views/users/mailer/confirmation_instructions.html.erb
+++ b/app/views/users/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,5 @@
 <p><%= t('devise.mailer.confirmation_instructions.greeting', recipient: @email) %></p>
 
-<p><%= t('devise.mailer.confirmation_instructions.instruction') %></p>
+<p><%= t 'devise.mailer.confirmation_instructions.instruction' %></p>
 
-<p><%= link_to t('devise.mailer.confirmation_instructions.confirm_email'), confirmation_url(@resource, confirmation_token: @token) %></p>
+<p><%= link_to t('devise.mailer.confirmation_instructions.confirm_my_account'), confirmation_url(@resource, confirmation_token: @token) %></p>
