--- a/app/views/users/mailer/reset_password_instructions.html.erb
+++ b/app/views/users/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,8 @@
 <p><%= t('devise.mailer.reset_password_instructions.greeting', recipient: @resource.email) %></p>
 
-<p><%= t 'devise.mailer.reset_password_instructions.instruction' %></p>
+<p><%= t('devise.mailer.reset_password_instructions.instruction') %></p>
 
 <p><%= link_to t('devise.mailer.reset_password_instructions.change_my_password'), edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p><%= t 'devise.mailer.reset_password_instructions.instruction_2' %></p>
-<p><%= t 'devise.mailer.reset_password_instructions.instruction_3' %></p>
+<p><%= t('devise.mailer.reset_password_instructions.instruction_2') %></p>
+<p><%= t('devise.mailer.reset_password_instructions.instruction_3') %></p>
