--- a/app/views/users/mailer/unlock_instructions.html.erb
+++ b/app/views/users/mailer/unlock_instructions.html.erb
@@ -1,7 +1,7 @@
 <p><%= t('devise.mailer.unlock_instructions.greeting', recipient: @resource.email) %></p>
 
-<p><%= t 'devise.mailer.unlock_instructions.message' %></p>
+<p><%= t('devise.mailer.unlock_instructions.message') %></p>
 
-<p><%= t 'devise.mailer.unlock_instructions.instruction' %></p>
+<p><%= t('devise.mailer.unlock_instructions.instruction') %></p>
 
 <p><%= link_to t('devise.mailer.unlock_instructions.unlock_my_account'), unlock_url(@resource, unlock_token: @token) %></p>
