--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,3 +1,5 @@
+<% set_meta_tags(title: '新規登録') %>
+
 <div class="w-full max-w-xs mx-auto mt-10">
   <h1 class="font-hairline mb-6 text-center text-xl">新規登録</h1>
 
@@ -30,7 +32,7 @@
       %>
     </div>
 
-    <div class="mb-4">
+    <div class="mb-6">
       <%= f.label :password_confirmation, class: "block font-bold mb-2 text-gray-700 text-sm" %>
       <%= f.password_field :password_confirmation,
         autocomplete: "new-password",
@@ -38,10 +40,10 @@
       %>
     </div>
 
-    <div class="mb-4">
+    <div class="mb-2 flex justify-center">
       <%= f.submit "登録する",
         data: { turbo: 'false' },
-        class: "cursor-pointer button rounded bg-lime-600 hover:bg-lime-700 font-bold text-white focus:outline-none py-2 px-4 focus:shadow-outline w-full"
+        class: "cursor-pointer button rounded bg-lime-600 hover:bg-lime-700 font-bold text-white focus:outline-none py-2 px-4 focus:shadow-outline"
       %>
     </div>
 
