--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -2,7 +2,7 @@
 
 .max-w
   .max-w
-    h1.text-center.font-bold.text-zinc-500.text-2xl.mt-6
+    h1.text-center.font-bold.text-zinc-600.text-2xl.mt-6
       | あなたの抽選会をもっとラクに
   .max-w.mt-3
     = image_tag 'logo_2.png', class: 'm-auto'
@@ -11,7 +11,7 @@
     .w-16.m-auto.mt-2.text-gray.text-sm
       = button_to 'ログイン', '/users/sign_in', method: :get, class: 'underline hover:no-underline'
   .mt-6
-    h1.text-center.font-bold.text-xl.text-zinc-500
+    h2.text-center.font-bold.text-xl.text-zinc-500
       | 抽選会を行う際にこんな手間ありませんか?
   .mx-auto
     div
@@ -24,13 +24,13 @@
     li.mt-2
       | 当選者にメールを送って、、
   .mt-3.text-center
-    h1.text-center.font-bold.text-xl.text-zinc-500
-      | この手間をSmartLotteryが解決します !
+    h2.text-center.font-bold.text-xl.text-zinc-500
+      | SmartLotteryはその手間を解決します!
   .mx-auto
     div
       = image_tag 'happy.png', class: 'mx-auto'
   ul.text-center.mb-6
-    li.mt-2
+    li.mt-2.font-semibold
       | 抽選会を作成するだけで
     li.mt-2
       | 自動で応募フォーム作成
