--- a/app/views/welcome/terms.html.slim
+++ b/app/views/welcome/terms.html.slim
@@ -1,4 +1,4 @@
-- set_meta_tags(title: '利用規約')
+- set_meta_tags(title: '利用規約', description: 'SmartLotteryの利用規約ページです。')
 
 .container.mt-6.p-2
   h1.text-4xl.font-semibold.mb-6
