--- a/app/views/welcome/privacy_policy.html.slim
+++ b/app/views/welcome/privacy_policy.html.slim
@@ -1,4 +1,4 @@
-- set_meta_tags(title: 'プライバシーポリシー')
+- set_meta_tags(title: 'プライバシーポリシー', description: 'SmartLotteryのプライバシーポリシーページです。')
 
 .container.mt-6
   h1.text-4xl.font-semibold.mb-6
