画像にalt属性を追加

--- a/app/views/entries/_entry_closed.html.slim
+++ b/app/views/entries/_entry_closed.html.slim
@@ -1,5 +1,5 @@
 .items-center
-  = image_tag 'thankyou.png', class: 'mx-auto'
+  = image_tag 'thankyou.png', class: 'mx-auto', alt: 'thankyou_image'
   .text-center
     h1.text-2xl.text-bold
       | 本抽選会は終了しました。
