--- a/app/views/entries/_entry_completed.html.slim
+++ b/app/views/entries/_entry_completed.html.slim
@@ -1,5 +1,5 @@
 .items-center
-  = image_tag 'completed.png', class: 'mx-auto'
+  = image_tag 'completed.png', class: 'mx-auto', alt: 'completed_image'
   .text-center
     h1.text-2xl.text-bold
       | 応募完了しました
