--- a/app/views/lotteries/index.html.slim
+++ b/app/views/lotteries/index.html.slim
@@ -9,7 +9,7 @@
 
 - if @lotteries.blank?
   .mx-auto.mt-8
-    = image_tag 'logo_3.png', class: 'mx-auto'
+    = image_tag 'logo_3.png', class: 'mx-auto', alt: 'logo'
   .mt-6.text-center
     h1.text-2xl.text-zinc-500.font-bold
       | SmartLotteryで抽選会をもっとラクに行いましょう !
