--- a/app/views/users/confirmations/new.html.erb
+++ b/app/views/users/confirmations/new.html.erb
@@ -6,12 +6,13 @@
     </h1>
 
     <%= form_for(resource,
-                 as: resource_name,
-                 url: confirmation_path(resource_name),
-                 html: {
-                         method: :post,
-                         class: "bg-stone-100 mb-4 px-8 pt-6 pb-8 rounded shadow-md"
-                 }) do |f| %>
+                  as: resource_name,
+                  url: confirmation_path(resource_name),
+                  html: {
+                          method: :post,
+                          class: "bg-stone-100 mb-4 px-8 pt-6 pb-8 rounded shadow-md"
+                  }
+                ) do |f| %>
 
         <%= render "users/shared/error_messages", resource: resource %>
 
@@ -27,7 +28,7 @@
 
         <div class="mb-4 flex justify-center">
             <%= f.submit "再送信",
-                         class: "button bg-lime-600 hover:bg-lime-700 font-bold text-white focus:outline-none py-2 px-4 rounded"
+                          class: "button cursor-pointer bg-lime-600 hover:bg-lime-700 font-bold text-white focus:outline-none py-2 px-4 rounded"
             %>
         </div>
 
