--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,6 +9,8 @@ html
     = javascript_importmap_tags
     = javascript_include_tag 'jquery'
     = favicon_link_tag 'favicon.ico'
+    = favicon_link_tag 'apple-touch-icon.png', rel: 'apple-touch-icon', sizes: '180x180', type: 'image/png'
+    = favicon_link_tag 'android-touch-icon.png', rel: 'android-touch-icon', sizes: '192x192', type: 'image/png'
     = display_meta_tags(default_meta_tags)
     script src='https://kit.fontawesome.com/66472dd369.js' crossorigin='anonymous'
   body.bg-gray-200.flex.flex-col.min-h-screen
