--- a/app/views/users/confirmations/new.html.erb
+++ b/app/views/users/confirmations/new.html.erb
@@ -10,7 +10,7 @@
                   url: confirmation_path(resource_name),
                   html: {
                           method: :post,
-                          class: "bg-stone-100 mb-4 px-8 pt-6 pb-8 rounded shadow-md"
+                          class: "bg-stone-100 mb-4 px-8 pt-6 pb-8 rounded"
                   }
                 ) do |f| %>
 
