--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -6,7 +6,7 @@
                 url: user_password_path(resource_name),
                 html: {
                   method: :put,
-                  class: "bg-white mb-4 px-8 pt-6 pb-8 rounded shadow-md"
+                  class: "bg-white mb-4 px-8 pt-6 pb-8 rounded"
                 }
         ) do |f| %>
 
@@ -24,7 +24,7 @@
             <%= f.password_field :password,
                                   autofocus: true,
                                   autocomplete: "new-password",
-                                  class: "appearance-none border leading-tight focus:outline-none px-3 py-2 rounded shadow focus:shadow-outline text-gray-700 w-full"
+                                  class: "appearance-none border leading-tight focus:outline-none px-3 py-2 rounded text-gray-700 w-full"
             %>
         </div>
 
@@ -35,13 +35,13 @@
             %>
             <%= f.password_field :password_confirmation,
                                   autocomplete: "off",
-                                  class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
+                                  class: "appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none"
             %>
         </div>
 
         <div class="mb-4">
             <%= f.submit "Change My Password",
-                          class: "button bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full" 
+                          class: "button bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-nonew-full" 
             %>
         </div>
 
