--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -18,7 +18,7 @@
         <div class="mb-4">
             <%= f.label :email, class: "block font-bold mb-2 text-gray-700 text-sm" %>
             <%= f.email_field :email, autofocus: true, autocomplete: "email",
-                              class: "appearance-none border leading-tight focus:outline-none px-3 py-2 rounded shadow focus:shadow-outline text-gray-700 w-full"
+                              class: "appearance-none border leading-tight focus:outline-none px-3 py-2 roundedtext-gray-700 w-full"
             %>
         </div>
 
