--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -7,7 +7,7 @@
     as: resource_name,
     url: registration_path(resource_name),
     html: {
-            class: "bg-stone-100 mb-4 px-8 pt-6 pb-8 rounded shadow-md"
+            class: "bg-stone-100 mb-4 px-8 pt-6 pb-8 rounded"
     }
   ) do |f| %>
 
@@ -18,7 +18,7 @@
       <%= f.email_field :email,
         autocomplete: "email",
         placeholder: "user@example.com",
-        class: "appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none shadow focus:shadow-outline" %>
+        class: "appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none" %>
     </div>
 
     <div class="mb-4">
@@ -28,7 +28,7 @@
       <% end %>
       <%= f.password_field :password,
         autocomplete: "new-password",
-        class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
+        class: "appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none"
       %>
     </div>
 
@@ -36,14 +36,14 @@
       <%= f.label :password_confirmation, class: "block font-bold mb-2 text-gray-700 text-sm" %>
       <%= f.password_field :password_confirmation,
         autocomplete: "new-password",
-        class: "appearance-none border leading-tight focus:outline-none px-3 py-2 rounded shadow focus:shadow-outline text-gray-700 w-full"
+        class: "appearance-none border leading-tight focus:outline-none px-3 py-2 rounded text-gray-700 w-full"
       %>
     </div>
 
     <div class="mb-2 flex justify-center">
       <%= f.submit "登録する",
         data: { turbo: 'false' },
-        class: "cursor-pointer button rounded bg-lime-600 hover:bg-lime-700 font-bold text-white focus:outline-none py-2 px-4 focus:shadow-outline"
+        class: "cursor-pointer button rounded bg-lime-600 hover:bg-lime-700 font-bold text-white focus:outline-none py-2 px-4"
       %>
     </div>
 
