--- a/app/views/users/unlocks/new.html.erb
+++ b/app/views/users/unlocks/new.html.erb
@@ -6,7 +6,7 @@
                  url: unlock_path(resource_name),
                  html: {
                          method: :post,
-                         class: "bg-white mb-4 px-8 pt-6 pb-8 rounded shadow-md"
+                         class: "bg-white mb-4 px-8 pt-6 pb-8 rounded"
                  }
         ) do |f| %>
 
@@ -17,13 +17,13 @@
             <%= f.email_field :email,
                               autofocus: true,
                               autocomplete: "email",
-                              class: "appearance-none border leading-tight focus:outline-none px-3 py-2 rounded shadow focus:shadow-outline text-gray-700 w-full"
+                              class: "appearance-none border leading-tight focus:outline-none px-3 py-2 rounded text-gray-700 w-full"
             %>
         </div>
 
         <div class="mb-4">
             <%= f.submit "Resend unlock instructions",
-                         class: "button bg-blue-500 hover:bg-blue-700 font-bold text-white focus:outline-none py-2 px-4 rounded focus:shadow-outline w-full"
+                         class: "button bg-blue-500 hover:bg-blue-700 font-bold text-white focus:outline-none py-2 px-4 rounded w-full"
             %>
         </div>
 
