--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -7,7 +7,7 @@
     - else
         h1.text-center.text-2xl.font-semibold.mt-3.text-slate-700
           | 新規応募
-        p.text-zinc-500.text-center.mt-3
+        p.text-zinc-500.text-center.mt-3.text-xs
           span.text-red-500
             | ※
           | が付与されている箇所は必須入力項目です。
