--- a/app/views/lotteries/show.html.slim
+++ b/app/views/lotteries/show.html.slim
@@ -9,7 +9,7 @@
       .text-center
         button.w-64.font-semibold.h-10.rounded.py-2.px-2.m-auto.border.border-zinc-400.hover:border-zinc-900 data-action='clipboard#copy' data-clipboard-target='copyButton'
           | 応募フォームのURLをコピーする
-        p.mt-2.text-xs.text-zinc-600
+        p.mt-2.text-sm.text-zinc-600
           | 応募フォームのURLを希望者に渡し応募してもらいましょう。
   == render @lottery
 
