一覧ページ内の抽選カードに貼られているリンクの領域を調整

--- a/app/views/lotteries/_form.html.slim
+++ b/app/views/lotteries/_form.html.slim
@@ -20,7 +20,7 @@
       .font-semibold.text-zinc-800
         | 応募フォームオプション
       p.mt-1.text-xs.text-zinc-500
-        | ※ Eメール入力欄はデフォルトで必須入力項目として追加されます
+        | ※ Eメール入力欄は必須入力項目として追加されます
 
     .mt-2
       = form.label :name_field_enabled, style: 'display: block', class: 'text-zinc-800'
