--- a/app/views/users/shared/_error_messages.html.erb
+++ b/app/views/users/shared/_error_messages.html.erb
@@ -1,11 +1,5 @@
 <% if resource.errors.any? %>
-  <div class="bg-red-100 border-l-4 border-red-500 mb-4 p-4 text-red-700" role="alert">
-    <h2>
-      <%= I18n.t("errors.messages.not_saved",
-                 count: resource.errors.count,
-                 resource: resource.class.model_name.human.downcase)
-       %>
-    </h2>
+  <div class="bg-red-100 border border-red-500 mb-4 p-4 text-red-700" role="alert">
     <ul>
       <% resource.errors.full_messages.each do |message| %>
         <li><%= message %></li>
