hover時の処理が漏れていたので追加

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -48,5 +48,5 @@
     </div>
 
   <% end %>
-  <%= button_to 'キャンセル', welcome_path, method: :get, class: 'underline' %>
+  <%= button_to 'キャンセル', welcome_path, method: :get, class: 'underline text-sm hover:no-underline' %>
 </div>
