応募フォームのfieldヘルパーを修正

--- a/app/views/entries/_form.html.slim
+++ b/app/views/entries/_form.html.slim
@@ -10,7 +10,7 @@
     .mt-3
       = form.label :email, class: 'font-semibold text-zinc-800 pr-2'
       span.text-red-500 ※
-      = form.text_field :email,
+      = form.email_field :email,
         required: true,
         class: 'w-full mt-1 text-blue-699 bg-gray-100 border-gray-300 rounded placeholder-gray-300',
         placeholder: 'entry@example.com'
