topページ専用のcontrollerを作成した

--- a/app/views/users/confirmations/new.html.erb
+++ b/app/views/users/confirmations/new.html.erb
@@ -34,5 +34,5 @@
 
         <%= render "users/shared/links" %>
     <% end %>
-    <%= button_to 'キャンセル', welcome_path, method: :get, class: 'underline' %>
+    <%= button_to 'キャンセル', root_path, method: :get, class: 'underline' %>
 </div>
