--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -29,5 +29,5 @@
 
         <%= render "users/shared/links" %>
     <% end %>
-    <%= button_to 'キャンセル', welcome_path, method: :get, class: 'underline hover:no-underline' %>
+    <%= button_to 'キャンセル', root_path, method: :get, class: 'underline hover:no-underline' %>
 </div>
