--- a/app/views/lotteries/show.html.slim
+++ b/app/views/lotteries/show.html.slim
@@ -2,7 +2,7 @@
 
 .p-2.m-auto.w-full.md:w-7/12
   h1.mt-6.font-semibold.text-2xl.text-center.text-slate-700
-    | 抽選会
+    = @lottery.name
   - unless closed?(@lottery)
     .mt-6.m-auto data-controller='clipboard'
       input type='hidden' value=new_lottery_entry_url(@lottery) readonly='readonly' data-clipboard-target='source'
