一覧画面で抽選会名を表示

--- a/app/views/lotteries/index.html.slim
+++ b/app/views/lotteries/index.html.slim
@@ -20,25 +20,26 @@
 
 - @lotteries.each do |lottery|
   .bg-stone-100.m-auto.border.border-gray.rounded.mt-6.w-full.text-zinc-800.md:w-3/6
-    = link_to lottery_path(lottery) do
-      .flex.p-2
-        .w-14.mx-2.my-2.shrink-0.text-center.text-white
-          - if closed?(lottery)
-            .bg-gray-500.rounded-full.text-sm.p-1
-              | 終了
-          - else
-            .bg-indigo-500.rounded-full.text-sm.p-1
-              | 開催中
-        .text-left.w-full
-          .h-20
-            - lottery.prizes.first(LotteriesHelper::DISPLAY_LIMIT).each_with_index do |prize, index|
-              p.my-2
-                = index == lottery.prizes.count - 1 ? "#{prize.name}の抽選会" : prize.name
-            - if extra_prizes_count(lottery).positive?
-              p.my-2
-                = "その他#{extra_prizes_count(lottery)}つの賞品の抽選会"
-          .text-sm.text-zinc-400.mt-3.md:flex
-            div
-              =  "締め切り日時: #{l(lottery.deadline.end_of_day)}"
-            .md:ml-2
-              = "当選枠: #{total_winners(lottery)}人"
+    .flex.p-2
+      .w-14.mx-2.my-2.shrink-0.text-center.text-white
+        - if closed?(lottery)
+          .bg-gray-500.rounded-full.text-sm.p-1
+            | 終了
+        - else
+          .bg-indigo-500.rounded-full.text-sm.p-1
+            | 開催中
+      .text-left.w-full
+        .h-28
+          .p-1.underline.font-semibold.hover:no-underline
+            = link_to "#{lottery.name}", lottery_path(lottery)
+          - lottery.prizes.first(LotteriesHelper::DISPLAY_LIMIT).each_with_index do |prize, index|
+            p.my-2
+              = index == lottery.prizes.count - 1 ? "#{prize.name}の抽選会" : prize.name
+          - if extra_prizes_count(lottery).positive?
+            p.my-2
+              = "その他#{extra_prizes_count(lottery)}つの賞品の抽選会"
+        .text-sm.text-zinc-400.mt-3.md:flex
+          div
+            =  "締め切り日時: #{l(lottery.deadline.end_of_day)}"
+          .md:ml-2
+            = "当選枠: #{total_winners(lottery)}人"
